# server

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GimuServer.slnx  README.MD  _generate_pk.bat  _generate_pk.sh  config-sample.json  generate.py  vcpkg-configuration.json  vcpkg.json
gimuserver/: App.hpp  AppVersion.h  AppVersion.hpp.in  BfCrypt.cpp  BfCrypt.hpp  BfWebController.cpp  BfWebController.hpp  CMakeLists.txt  Controllers.hpp  DlsController.cpp  DlsController.hpp  Utils.cpp  Utils.hpp  todo.txt
gimuserver/controller/: AccountController.cpp  AccountController.hpp  BfWebController.cpp  BfWebController.hpp  DlsController.cpp  DlsController.hpp  GmeController.cpp  GmeController.hpp  WebTerms.hpp
gimuserver/core/: AppVersion.hpp.in  BfCrypt.cpp  BfCrypt.hpp  Config.cpp  Config.hpp  Controllers.hpp  System.cpp  System.hpp  SystemConfig.hpp  Utils.cpp  Utils.hpp
gimuserver/db/: DbMacro.hpp  IMigration.hpp  MigrationManager.cpp  MigrationManager.hpp  MigrationManager_Register.cpp
gimuserver/db/migrations/: CreateDefaultTables.hpp  CreateUserUnitsTable.hpp
gimuserver/drogon/: GimuServer.cpp  GimuServer.hpp  ServerCache.cpp  ServerCache.hpp  ServerCacheMst.hpp  ServerConfig.hpp
gimuserver/gme/: BadgeInfo.cpp  ControlCenterEnter.cpp  DeckEdit.cpp  FriendGet.cpp  GatchaList.cpp  GmeCoder.cpp  GmeCoder.hpp  GmeCoder_Fields.cpp  GmeCoder_Keys.cpp  GmeController.cpp  GmeController.hpp  GmeControllerHandlers.cpp  GmeController_Handlers.cpp  GmeHandler.cpp  GmeHandler.hpp  GmeRequest.hpp  GmeTypes.hpp  Handlers.hpp  HomeInfo.cpp  Initialize.cpp  MissionStart.cpp  UpdateInfoLight.cpp  UserInfo.cpp  UserInfo.hpp
gimuserver/gme/handlers/: AchievementAcceptRequestHandler.cpp  (+580 more)
gimuserver/gme_old/: GmeController.cpp  GmeController_Handlers.cpp  GmeHandler.cpp  GmeHandler.hpp  GmeSession.hpp  UserInfo.hpp
gimuserver/gumiapi/: AccountController.cpp  AccountController.hpp  DlsController.cpp  DlsController.hpp
gimuserver/packets/: all.hpp  badgeinfo.hpp  banner.hpp  challenge_arena.hpp  daily_login.hpp  dailytaskbonus.hpp  define.hpp  dungeonkey.hpp  events.hpp  excludeddungeon.hpp  featuring_gate.hpp  firstdesc.hpp  friends.hpp  gatcha.hpp  gift.hpp  gme.hpp  guild.hpp  gumi_live.hpp  items.hpp  logincampaign.hpp  missionbreakinfo.hpp  noticeinfo.hpp  npc.hpp  npcmessageoverwriteinfo.hpp  passiveskill.hpp  permitplace.hpp  raid.hpp  receipe.hpp  reinforcementinfo.hpp  signalkey.hpp  slots.hpp  summonerjournaluserinfo.hpp  summonticketuserinfo.hpp  town.hpp  unit.hpp  url.hpp  userinfo.hpp  userlevel.hpp  versioninfo.hpp
gimuserver/static_web/: BfWebController.cpp  BfWebController.cpp.bak  BfWebController.hpp
gimuserver/system/: DailyTaksConfig.cpp  DailyTaskConfig.hpp  LogConfig.cpp  LogConfig.hpp  LoginCampaign.cpp  LoginCampaign.hpp  MstConfig.cpp  MstConfig.hpp  MstInfo.cpp  MstInfo.hpp  ServerConfig.cpp  ServerConfig.hpp  StartInfo.cpp
gimuserver/system_old/: DailyTaksConfig.cpp  MstCache.cpp  MstCache.hpp  StartInfo.cpp  StartInfo.hpp  System.cpp  System.hpp
gimuserver/utils/: BfCrypt.cpp  BfCrypt.hpp  Drogon.hpp  DumpLog.hpp  Macros.hpp  Random.hpp  Utils.cpp  Utils.hpp
(+202 files in other folders)
