file(GLOB_RECURSE SRC "*.cpp" "*.hpp")
configure_file("${CMAKE_CURRENT_LIST_DIR}/core/AppVersion.hpp.in" "${CMAKE_CURRENT_BINARY_DIR}/generated/AppVersion.hpp")
source_group(TREE "${CMAKE_CURRENT_LIST_DIR}" FILES ${SRC})
add_library(gimuserver STATIC ${SRC})
target_link_libraries(gimuserver PUBLIC Drogon::Drogon cryptopp::cryptopp)
target_include_directories(gimuserver PUBLIC ../ ${CMAKE_CURRENT_BINARY_DIR}/generated/ PRIVATE .)
